--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -1,14 +1,12 @@
 <resources>
     <string name="app_name">Bild</string>
-    <string name="hint_userid">User Id</string>
+    <string name="hint_userid">Username</string>
     <string name="hint_password">Password</string>
     <string name="hint_name">Fullname</string>
     <string name="btn_login">LOGIN</string>
-    <string name="btn_register">REGISTER</string>
-    <string name="btn_link_to_register">Not a member? Sign up now.</string>
-    <string name="btn_link_to_login">Already registred! Login Me.</string>
     <string name="welcome">Welcome</string>
-    <string name="btn_logout">LOGOUT</string>
+    <string name="btn_logout1">LOGOUT</string>
+    <string name="btn_logout">BACK</string>
     <string name="name">Fullname</string>
     <string name="action_settings">Setting</string>
     <string name="btn_cohort">Cohorts</string>
@@ -27,5 +25,11 @@
     <string name="btn_trainees_list">Trainees List</string>
     <string name="title_activity_enter_edit_trainees_details">EnterEditTraineesDetails</string>
     <string name="title_activity_trainees_list">TraineesList</string>
+
+    <string name="lbl1">Agape Institute</string>
+    <string name="lbl2">Of</string>
+    <string name="lbl3">Leadership Development</string>
+    <string name="lbl4">and</string>
+    <string name="lbl5">BILD</string>
 
 </resources>
